--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -121,26 +121,27 @@
 						<button class="btn btn-success">新增</button>
 						<thead>
 							<tr>
-								<th scope="col">名稱</th>
-								<th scope="col">描述</th>
-								<th scope="col">課時</th>
+								<th scope="col">科系</th>
+								<th scope="col">課程名稱</th>
+								<th scope="col">選/必修</th>
+								<th scope="col">老師</th>
+								<th scope="col">年份</th>
+								<th scope="col">學期</th>
+								<th scope="col">上課時間</th>
+								<th scope="col">上課地點</th>
 								<th scope="col">操作</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-								<td>大學英語</td>
-								<td>大學英語精讀課</td>
-								<td>24課時</td>
-								<td>
-									<button class="btn btn-success btn-sm">編輯</button>
-									<button class="btn btn-danger btn-sm">刪除</button>
-								</td>
-							</tr>
-							<tr>
-								<td>大學英語</td>
-								<td>大學英語精讀課</td>
-								<td>24課時</td>
+								<td>資訊管理系</td>
+								<td>程式設計</td>
+								<td>選修</td>
+								<td>方仁威</td>
+								<td>107</td>
+								<td>上</td>
+								<td>星期一 1-4節</td>
+								<td>101教室</td>
 								<td>
 									<button class="btn btn-success btn-sm">編輯</button>
 									<button class="btn btn-danger btn-sm">刪除</button>
