--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>學生成績管理系統</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
 	<style>
@@ -52,6 +52,19 @@
 			background-color: #007bff;
 			border-color: #007bff;
 		}
+
+		.form-group {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        .form-group label {
+            margin-right: 10px;
+            white-space: nowrap;
+        }
+        .form-group select, .form-group input {
+            flex: 1;
+        }
 
 		@media (max-width: 992px) {
 			.sidebar {
@@ -118,7 +131,7 @@
 
 				<div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
 					<table class="table table-striped table-hover">
-						<button class="btn btn-success">新增</button>
+						<button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insertModal">新增</button>
 						<thead>
 							<tr>
 								<th scope="col">科系</th>
@@ -132,22 +145,7 @@
 								<th scope="col">操作</th>
 							</tr>
 						</thead>
-						<tbody>
-							<tr>
-								<td>資訊管理系</td>
-								<td>程式設計</td>
-								<td>選修</td>
-								<td>方仁威</td>
-								<td>107</td>
-								<td>上</td>
-								<td>星期一 1-4節</td>
-								<td>101教室</td>
-								<td>
-									<button class="btn btn-success btn-sm">編輯</button>
-									<button class="btn btn-danger btn-sm">刪除</button>
-								</td>
-							</tr>
-							<!-- 更多課程資料 -->
+						<tbody id="courseBody">
 						</tbody>
 					</table>
 				</div>
@@ -163,11 +161,84 @@
 			</main>
 		</div>
 	</div>
-
+	<!-- Modal -->
+	<div class="modal fade" id="insertModal" tabindex="-1" aria-labelledby="insertModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="insertModalLabel">課程訊息</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<form class="modal-body">
+					<div class="form-group">
+						<label for="depId">科&#12288;&#12288;系:</label>
+						<select id="depId" name="depId" class="form-select" aria-label="Default select example">
+							<option selected value="IM">資訊管理系</option>
+							<option value="GE">通識</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="courseId">課程代號:</label>
+						<input type="text" id="courseId" name="courseId" class="form-control" placeholder="請輸入課程代號">
+					</div>
+					<div class="form-group">
+						<label for="courseName">課程名稱:</label>
+						<input type="text" id="courseName" name="courseName" class="form-control" placeholder="請輸入課程名稱">
+					</div>
+					<div class="form-group">
+						<label for="courseRequired">課程類別:</label>
+						<select id="courseRequired" name="courseRequired" class="form-select">
+							<option selected value="1">必修</option>
+							<option value="2">選修</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="teacherId">授課老師:</label>
+						<select id="teacherId" name="teacherId" class="form-select">
+							<option selected value="TE100001">方仁威</option>
+							<option value="TE100002">林孟文</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="courseRequired">課程年份:</label>
+						<input type="number" id="courseYear" name="courseYear" class="form-control">
+						<select id="courseRequired" name="courseRequired" class="form-select">
+							<option selected value="1">上</option>
+							<option value="2">下</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="courseOfWeek">上課時間:</label>
+						<select id="courseOfWeek" name="courseOfWeek" class="form-select">
+							<option selected value="Monday">星期一</option>
+							<option value="Tuesday">星期二</option>
+							<option value="Wednesday">星期三</option>
+							<option value="Thursday">星期四</option>
+							<option value="Friday">星期五</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="courseLocate">&#12288;&#12288;&#12288;&#12288;&nbsp;</label>
+						第<input type="number" min="1" max="8" id="courseStart" name="courseStart" class="form-control">節到
+						<input type="number" min="1" max="8" id="courseEnd" name="courseEnd" class="form-control">節
+					</div>
+					<div class="form-group">
+						<label for="courseLocate">上課地點:</label>
+						<input type="text" id="courseLocate" name="courseLocate" class="form-control" placeholder="請輸入上課地點">
+					</div>
+				</form>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+					<button type="button" class="btn btn-primary">保存</button>
+				</div>
+			</div>
+		</div>
+  	</div>
+  
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 	<script>
-		document.addEventListener('DOMContentLoaded', function () {
+		document.addEventListener('DOMContentLoaded', () => {
 			var navLink = document.getElementsByClassName('nav-link');
 			var personalInfoCollapse = new bootstrap.Collapse(document.getElementById('personalInfoCollapse'), {
                 toggle: false
@@ -208,10 +279,33 @@
 					}
 				})
 			}
-
-
+			searchCourse();
 		});
 
+		const searchCourse = async() => {
+			const res = await fetch('http://localhost:8080/findcourse');
+			const {state, message, data} = await res.json();
+			if (state) {
+				data.forEach(d => {
+					$('#courseBody').append(`
+					<tr>
+						<td>${d.deptName}</td>
+						<td>${d.courseName}</td>
+						<td>${d.required}</td>
+						<td>${d.teacherName}</td>
+						<td>${d.course_year}</td>
+						<td>${d.semester}</td>
+						<td>${d.courseTime}</td>
+						<td>${d.course_locate}</td>
+						<td>
+							<button class="btn btn-success btn-sm">編輯</button>
+							<button class="btn btn-danger btn-sm">刪除</button>
+						</td>
+					</tr>
+					`);
+				});
+			}
+		}
 	</script>
 </body>
 
