新增 insertCourse 方法

--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -200,9 +200,9 @@
 						</select>
 					</div>
 					<div class="form-group">
-						<label for="courseRequired">課程年份:</label>
+						<label for="courseYear">課程年份:</label>
 						<input type="number" id="courseYear" name="courseYear" class="form-control">
-						<select id="courseRequired" name="courseRequired" class="form-select">
+						<select id="courseSemester" name="courseSemester" class="form-select">
 							<option selected value="1">上</option>
 							<option value="2">下</option>
 						</select>
