--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -132,7 +132,7 @@
 
 				<div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
 					<table class="table table-striped table-hover">
-						<button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insertModal">新增</button>
+						<button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insertModal" onclick="insertCourse()">新增</button>
 						<thead>
 							<tr>
 								<th scope="col">科系</th>
@@ -171,11 +171,12 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<form id="courseForm" action="">
-					<input type="hidden" id="courseIndex" name="courseIndex">
+					<input type="hidden" name="saveFunction" id="saveFunction" value="insert">
+					<input type="hidden" name="courseIndex" id="courseIndex">
 					<div class="modal-body">
 						<div class="form-group">
-							<label for="depId">科&#12288;&#12288;系:</label>
-							<select id="depId" name="depId" class="form-select" aria-label="Default select example">
+							<label for="courseDep">科&#12288;&#12288;系:</label>
+							<select id="courseDep" name="courseDep" class="form-select" aria-label="Default select example">
 							</select>
 						</div>
 						<div class="form-group">
@@ -233,8 +234,8 @@
 				</form>
 			</div>
 		</div>
-  	</div>
-  
+	</div>
+
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="./js/common.js"></script>
@@ -246,15 +247,13 @@
 
 			$('#courseForm').submit((e) => {
 				e.preventDefault();
-				insertCourse();
+				saveCourse();
 			});
 		});
-		
-		// 新增課程
-		const insertCourse = async() => {
+		const saveCourse = async() => {
 			var formData = {
 				courseIndex : $('#courseIndex').val(),
-				depId : $('#depId').val(),
+				courseDep : $('#courseDep').val(),
 				courseId : $('#courseId').val(),
 				courseName : $('#courseName').val(),
 				courseRequired : $('#courseRequired').val(),
@@ -267,8 +266,12 @@
 				courseLocate : $('#courseLocate').val()
 			}
 
-			const response = await fetch('http://localhost:8080/insertcourse', {
-				method : 'POST',
+			var saveFunction = $('#saveFunction').val();
+			var uri = saveFunction == 'insert' ? 'insertcourse' : 'updatecourse';
+			var method = saveFunction == 'insert' ? 'POST' : 'PUT';
+
+			const response = await fetch(`http://localhost:8080/${uri}`, {
+				method : `${method}`,
 				headers : {
 					'Content-Type': 'application/json'
 				},
@@ -283,39 +286,39 @@
 				var modalInstance = bootstrap.Modal.getInstance(modalElement);
 				modalInstance.hide();
 				$('#courseForm')[0].reset();
-				searchCourse();
-			} else {
-				alert(message);
+				searchCourse();				
 			}
+			alert(message);
+		}
+		// 新增課程
+		const insertCourse = async() => {
+			$('#courseForm')[0].reset();
+			$('#saveFunction').val('insert');
 		}
 		// 刪除課程
 		const deleteCourse = async(e) => {
-			var formData = {
-				courseDep : e.getAttribute('course-dep'),
-				courseId : e.getAttribute('course-id'),
-				courseYear : e.getAttribute('course-year'),
-				courseSemester : e.getAttribute('cousre-semester')				
-			}
-			const response = await fetch('http://localhost:8080/deletecourse', {
-				method : "DELETE",
-				headers : {
-					'Content-Type': 'application/json'
-				},
-				body : JSON.stringify(formData)
-			});
-			const {state, message, data} = await response.json();
-			alert(message);
-			if (state) {				
-				searchCourse();
-			}
+			if (confirm("是否要刪除?")) {
+				var formData = {
+					courseIndex : e.getAttribute('course-index')
+				}
+				const response = await fetch('http://localhost:8080/deletecourse', {
+					method : "DELETE",
+					headers : {
+						'Content-Type': 'application/json'
+					},
+					body : JSON.stringify(formData)
+				});
+				const {state, message, data} = await response.json();
+				alert(message);
+				if (state) {				
+					searchCourse();
+				}
+			}			
 		}
 		// 編輯課程
 		const updateCourse = async(e) => {
 			var formData = {
-				depId : e.getAttribute('course-dep'),
-				courseId : e.getAttribute('course-id'),
-				courseYear : e.getAttribute('course-year'),
-				courseSemester : e.getAttribute('cousre-semester')
+				courseIndex : e.getAttribute('course-index'),
 			}
 			var queryString = new URLSearchParams(formData).toString();
 
@@ -326,18 +329,19 @@
 				}
 			});
 			const {state, message, data} = await response.json();
-			await $('#depId').val(data[0].course_dep).change();
-			$('#courseId').val(data[0].course_id);
-			$('#courseName').val(data[0].courseName);
-			$('#courseRequired').val(data[0].course_required);
-			$('#teacherId').val(data[0].teacher_id);
-			$('#courseYear').val(data[0].courseYear);
-			$('#courseSemester').val(data[0].course_semester);
-			$('#courseOfWeek').val(data[0].course_of_week);
-			$('#courseStart').val(data[0].course_start);
-			$('#courseEnd').val(data[0].course_end);
-			$('#courseLocate').val(data[0].courseLocate);
+			await $('#courseDep').val(data[0].courseDep).change();
 			$('#courseIndex').val(data[0].courseIndex);
+			$('#courseId').val(data[0].courseId);
+			$('#courseName').val(data[0].courseName);
+			$('#courseRequired').val(data[0].courseRequired);
+			$('#teacherId').val(data[0].teacherId);
+			$('#courseYear').val(data[0].courseYear);
+			$('#courseSemester').val(data[0].courseSemester);
+			$('#courseOfWeek').val(data[0].courseOfWeek);
+			$('#courseStart').val(data[0].courseStart);
+			$('#courseEnd').val(data[0].courseEnd);
+			$('#courseLocate').val(data[0].courseLocate);
+			$('#saveFunction').val('update');
 		}
 		// 查詢課程
 		const searchCourse = async() => {
@@ -348,7 +352,7 @@
 				data.forEach(obj => {
 					$('#courseBody').append(`
 					<tr>
-						<td>${obj.deptName}</td>
+						<td>${obj.departmentName}</td>
 						<td>${obj.courseName}</td>
 						<td>${obj.required}</td>
 						<td>${obj.teacherName}</td>
@@ -357,8 +361,8 @@
 						<td>${obj.courseTime}</td>
 						<td>${obj.courseLocate}</td>
 						<td>
-							<button id="updateCourse" onclick="updateCourse(this)" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#insertModal" course-dep="${obj.course_dep}" course-id="${obj.course_id}" course-year="${obj.courseYear}" cousre-semester="${obj.course_semester}">編輯</button>
-							<button id="deleteCourse" onclick="deleteCourse(this)" class="btn btn-danger btn-sm" course-dep="${obj.course_dep}" course-id="${obj.course_id}" course-year="${obj.courseYear}" cousre-semester="${obj.course_semester}">刪除</button>
+							<button id="updateCourse" onclick="updateCourse(this)" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#insertModal" course-index="${obj.courseIndex}">編輯</button>
+							<button id="deleteCourse" onclick="deleteCourse(this)" class="btn btn-danger btn-sm" course-index="${obj.courseIndex}">刪除</button>
 						</td>
 					</tr>
 					`);
