--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -250,6 +250,7 @@
 				saveCourse();
 			});
 		});
+		// 按下保存
 		const saveCourse = async() => {
 			var formData = {
 				courseIndex : $('#courseIndex').val(),
