修改前端架構

--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -122,208 +122,20 @@
 			</nav>
 
 			<main id="content" class="col-12 col-lg-10 order-2 order-lg-2 content">
-
 			</main>
-		</div>
-	</div>
-	<!-- Modal -->
-	<div class="modal fade" id="insertModal" tabindex="-1" aria-labelledby="insertModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="insertModalLabel">課程訊息</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<form id="courseForm" action="">
-					<input type="hidden" name="saveFunction" id="saveFunction" value="insert">
-					<input type="hidden" name="courseIndex" id="courseIndex">
-					<div class="modal-body">
-						<div class="form-group">
-							<label for="courseDep">科&#12288;&#12288;系:</label>
-							<select id="courseDep" name="courseDep" class="form-select" aria-label="Default select example">
-							</select>
-						</div>
-						<div class="form-group">
-							<label for="courseId">課程代號:</label>
-							<input type="text" id="courseId" name="courseId" class="form-control" placeholder="請輸入課程代號" required>
-						</div>
-						<div class="form-group">
-							<label for="courseName">課程名稱:</label>
-							<input type="text" id="courseName" name="courseName" class="form-control" placeholder="請輸入課程名稱" required>
-						</div>
-						<div class="form-group">
-							<label for="courseRequired">課程類別:</label>
-							<select id="courseRequired" name="courseRequired" class="form-select">
-								<option selected value="1">必修</option>
-								<option value="2">選修</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<label for="teacherId">授課老師:</label>
-							<select id="teacherId" name="teacherId" class="form-select">
-							</select>
-						</div>
-						<div class="form-group">
-							<label for="courseYear">課程年份:</label>
-							<input type="number" id="courseYear" name="courseYear" class="form-control" required>
-							<select id="courseSemester" name="courseSemester" class="form-select">
-								<option selected value="1">上</option>
-								<option value="2">下</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<label for="courseOfWeek">上課時間:</label>
-							<select id="courseOfWeek" name="courseOfWeek" class="form-select">
-								<option selected value="Monday">星期一</option>
-								<option value="Tuesday">星期二</option>
-								<option value="Wednesday">星期三</option>
-								<option value="Thursday">星期四</option>
-								<option value="Friday">星期五</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<label>&#12288;&#12288;&#12288;&#12288;&nbsp;</label>
-							第<input type="number" min="1" max="8" id="courseStart" name="courseStart" class="form-control" required>節到
-							<input type="number" min="1" max="8" id="courseEnd" name="courseEnd" class="form-control" required>節
-						</div>
-						<div class="form-group">
-							<label for="courseLocate">上課地點:</label>
-							<input type="text" id="courseLocate" name="courseLocate" class="form-control" placeholder="請輸入上課地點" required>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-						<button type="submit" class="btn btn-primary">保存</button>
-					</div>
-				</form>
-			</div>
 		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="./js/common.js"></script>
+	<script src="./js/root_course.js"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
 			renderHtml('content', 'root/root_front_page.html');
 			sideBarLinkage();
-			searchCourse();
-			loadDepartment();
-			
-			$('#courseForm').submit((e) => {
-				e.preventDefault();
-				saveCourse();
-			});
 		});
-		// 按下保存
-		const saveCourse = async() => {
-			var formData = {
-				courseIndex : $('#courseIndex').val(),
-				courseDep : $('#courseDep').val(),
-				courseId : $('#courseId').val(),
-				courseName : $('#courseName').val(),
-				courseRequired : $('#courseRequired').val(),
-				teacherId : $('#teacherId').val(),
-				courseYear : $('#courseYear').val(),
-				courseSemester : $('#courseSemester').val(),
-				courseOfWeek : $('#courseOfWeek').val(),
-				courseStart : $('#courseStart').val(),
-				courseEnd : $('#courseEnd').val(),
-				courseLocate : $('#courseLocate').val()
-			}
 
-			var saveFunction = $('#saveFunction').val();
-			var uri = saveFunction == 'insert' ? 'insertCourse' : `updateCourse/${formData.courseIndex}`;
-			var method = saveFunction == 'insert' ? 'POST' : 'PUT';
-
-			const response = await fetch(`http://localhost:8080/${uri}`, {
-				method : `${method}`,
-				headers : {
-					'Content-Type': 'application/json'
-				},
-				body : JSON.stringify(formData)
-			});
-			
-			const {state, message, data} = await response.json();
-			
-			if (state) {
-				// 關閉模態框
-				var modalElement = document.getElementById('insertModal');
-				var modalInstance = bootstrap.Modal.getInstance(modalElement);
-				modalInstance.hide();
-				$('#courseForm')[0].reset();
-				searchCourse();				
-			}
-			alert(message);
-		}
-		// 新增課程
-		const insertCourse = async() => {
-			$('#courseForm')[0].reset();
-			$('#saveFunction').val('insert');
-		}
-		// 刪除課程
-		const deleteCourse = async(e) => {
-			if (confirm("是否要刪除?")) {
-				var courseIndex = e.getAttribute('course-index');
-				const response = await fetch(`http://localhost:8080/deleteCourse/${courseIndex}`, {
-					method : "DELETE"
-				});
-				const {state, message, data} = await response.json();
-				alert(message);
-				if (state) {
-					searchCourse();
-				}
-			}
-		}
-		// 編輯課程
-		const updateCourse = async(e) => {
-			var formData = {
-				courseIndex : e.getAttribute('course-index'),
-			}
-			var queryString = new URLSearchParams(formData).toString();
-
-			const response = await fetch(`http://localhost:8080/findCourse?${queryString}`);
-			const {state, message, data} = await response.json();
-			$('#courseDep').val(data[0].courseDep).change();
-			$('#courseIndex').val(data[0].courseIndex);
-			$('#courseId').val(data[0].courseId);
-			$('#courseName').val(data[0].courseName);
-			$('#courseRequired').val(data[0].courseRequired);
-			$('#teacherId').val(data[0].teacherId);
-			$('#courseYear').val(data[0].courseYear);
-			$('#courseSemester').val(data[0].courseSemester);
-			$('#courseOfWeek').val(data[0].courseOfWeek);
-			$('#courseStart').val(data[0].courseStart);
-			$('#courseEnd').val(data[0].courseEnd);
-			$('#courseLocate').val(data[0].courseLocate);
-			$('#saveFunction').val('update');
-		}
-		// 查詢課程
-		const searchCourse = async() => {
-			$('#courseBody').html('');
-			const response = await fetch('http://localhost:8080/findCourse');
-			const {state, message, data} = await response.json();
-			if (state) {
-				data.forEach(obj => {
-					$('#courseBody').append(`
-					<tr>
-						<td>${obj.departmentName}</td>
-						<td>${obj.courseName}</td>
-						<td>${obj.required}</td>
-						<td>${obj.teacherName}</td>
-						<td>${obj.courseYear}</td>
-						<td>${obj.semester}</td>
-						<td>${obj.courseTime}</td>
-						<td>${obj.courseLocate}</td>
-						<td>
-							<button id="updateCourse" onclick="updateCourse(this)" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#insertModal" course-index="${obj.courseIndex}">編輯</button>
-							<button id="deleteCourse" onclick="deleteCourse(this)" class="btn btn-danger btn-sm" course-index="${obj.courseIndex}">刪除</button>
-						</td>
-					</tr>
-					`);
-				});
-			}
-		}
 		// sidebar 連動
 		const sideBarLinkage = () => {
 			var navLink = document.getElementsByClassName('nav-link');
@@ -338,10 +150,9 @@
 						clickedElement = clickedElement.closest('.nav-link');
 					}
 
-					var page = clickedElement.getAttribute('link-page')
+					var page = clickedElement.getAttribute('link-page');
 					if (page) {
 						renderHtml('content', `root/${page}.html`);
-						searchCourse();
 					}
 					// 切換 active 屬性
 					var activeElement = document.querySelector('.nav-link.active');
