--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -9,21 +9,21 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insertModal" onclick="insertCourse()">新增</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insertModal" onclick="insertStudent()">新增</button>
         <thead>
             <tr>
-                <th scope="col">科系</th>
-                <th scope="col">課程名稱</th>
-                <th scope="col">選/必修</th>
-                <th scope="col">老師</th>
-                <th scope="col">年份</th>
-                <th scope="col">學期</th>
-                <th scope="col">上課時間</th>
-                <th scope="col">上課地點</th>
-                <th scope="col">操作</th>
+                <th>學號</th>
+                <th>姓名</th>
+                <th>科系</th>
+                <th>性別</th>
+                <th>生日</th>
+                <th>Email</th>
+                <th>手機</th>
+                <th>班級</th>
+                <th>操作</th>
             </tr>
         </thead>
-        <tbody id="courseBody">
+        <tbody id="studentBody">
         </tbody>
     </table>
 </div>
