完成新增學生資料

--- a/src/main/resources/static/root/root_course.html
+++ b/src/main/resources/static/root/root_course.html
@@ -113,7 +113,7 @@
 <script>
     loadDepartment();
     searchCourse();
-    $('#courseForm').off('submit').on('submit', (e) => {
+    $('#courseForm').on('submit', (e) => {
         e.preventDefault();
         saveCourse();
     });
