--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -130,6 +130,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="./js/common.js"></script>
 	<script src="./js/root_course.js"></script>
+	<script src="./js/root_student.js"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
 			renderHtml('content', 'root/root_front_page.html');
