--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -1,5 +1,4 @@
 <div class="d-flex mb-3 p-3 border border-opacity-100 bg-white rounded ">
-    學生頁面
     <input type="text" class="form-control w-50" placeholder="請輸入關鍵字查詢">
     <div class="ms-2">
         <button class="btn btn-success">查詢</button>
@@ -9,7 +8,7 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insertModal" onclick="insertStudent()">新增</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#studentModal" onclick="insertStudent()">新增</button>
         <thead>
             <tr>
                 <th>學號</th>
@@ -36,3 +35,80 @@
         <!-- 更多分頁按鈕 -->
     </div>
 </div>
+
+<div class="modal fade" id="studentModal" tabindex="-1" aria-labelledby="studentModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="studentModalLabel">學生訊息</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form id="studentForm" action="">
+                <input type="hidden" name="saveFunction" id="saveFunction" value="insert">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="courseDep">學&#12288;&#12288;號:</label>
+                        <input type="text" id="userId" name="userId" class="form-control" placeholder="請輸入學號" required>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="courseId">姓&#12288;&#12288;名:</label>
+                        <input type="text" id="userName" name="userName" class="form-control" placeholder="請輸入姓名" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="courseDep">科&#12288;&#12288;系:</label>
+                        <select id="courseDep" name="courseDep" class="form-select">
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>性&#12288;&#12288;別:</label>
+                        <div>
+                            <input class="form-check-input" type="radio" name="sex" id="male" value="1" checked>
+                            <label class="form-check-label" for="male">男</label>
+                        </div>
+                        <div>
+                            <input class="form-check-input" type="radio" name="sex" id="female" value="2">
+                            <label class="form-check-label" for="female">女</label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="birthDate">生&#12288;&#12288;日:</label>
+                        <input type="date" id="birthDate" name="birthDate" class="form-control" placeholder="請輸入生日" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">電子信箱:</label>
+                        <input type="email" id="email" name="email" class="form-control" placeholder="請輸入Email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">手&#12288;&#12288;機:</label>
+                        <input type="text" id="phone" name="phone" class="form-control" placeholder="請輸入手機" required>
+                    </div>
+                    <div class="form-group">
+                        <label>班&#12288;&#12288;級</label>
+                        <select id="classGrade" name="classGrade" class="form-select">
+                        </select>年
+                        <select id="className" name="className" class="form-select">
+                        </select>班
+                    </div>
+                    <div class="form-group">
+                        <label for="birthDate">入學日期:</label>
+                        <input type="date" id="admissionDate" name="admissionDate" class="form-control" placeholder="請輸入入學日期" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary">保存</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script>
+    searchStudent();
+    loadDepartment();
+    $('#studentForm').on('submit', (e) => {
+        e.preventDefault();
+        saveStudent();
+    });
+</script>
