--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -45,6 +45,7 @@
             </div>
             <form id="studentForm" action="">
                 <input type="hidden" name="saveFunction" id="saveFunction" value="insert">
+                <input type="hidden" name="classId" id="classId">
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="courseDep">學&#12288;&#12288;號:</label>
@@ -86,8 +87,15 @@
                     <div class="form-group">
                         <label>班&#12288;&#12288;級</label>
                         <select id="classGrade" name="classGrade" class="form-select">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
                         </select>年
                         <select id="className" name="className" class="form-select">
+                            <option value="甲">甲</option>
+                            <option value="乙">乙</option>
+                            <option value="丙">丙</option>
                         </select>班
                     </div>
                     <div class="form-group">
