--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -105,7 +105,7 @@
                     </div>
                     <div class="form-group">
                         <label for="birthDate">大頭貼:&#12288;</label>
-                        <input type="file" id="sticker" name="sticker" class="form-control">
+                        <input type="file" id="sticker" name="sticker" class="form-control" accept=".jpg, .png">
                     </div>
                 </div>
                 <div class="modal-footer">
