--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -106,6 +106,7 @@
                     <div class="form-group">
                         <label for="birthDate">大頭貼:&#12288;</label>
                         <input type="file" id="sticker" name="sticker" class="form-control" accept=".jpg, .png">
+                        <img id="stickerPreview" src="" alt="預覽圖片" style="max-width: 200px; max-height: 200px; margin-top: 10px; display: none;">
                     </div>
                 </div>
                 <div class="modal-footer">
