完成管理員頁面

--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -131,6 +131,7 @@
 	<script src="./js/common.js"></script>
 	<script src="./js/root_course.js"></script>
 	<script src="./js/root_student.js"></script>
+	<script src="./js/root_teacher.js"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
 			renderHtml('content', 'root/root_front_page.html');
