--- a/src/main/resources/static/root/root_teacher.html
+++ b/src/main/resources/static/root/root_teacher.html
@@ -1,5 +1,4 @@
 <div class="d-flex mb-3 p-3 border border-opacity-100 bg-white rounded ">
-    老師頁面
     <input type="text" class="form-control w-50" placeholder="請輸入關鍵字查詢">
     <div class="ms-2">
         <button class="btn btn-success">查詢</button>
@@ -9,21 +8,22 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insertModal" onclick="insertCourse()">新增</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#teacherModal" onclick="insertTeacher()">新增</button>
         <thead>
             <tr>
-                <th scope="col">科系</th>
-                <th scope="col">課程名稱</th>
-                <th scope="col">選/必修</th>
-                <th scope="col">老師</th>
-                <th scope="col">年份</th>
-                <th scope="col">學期</th>
-                <th scope="col">上課時間</th>
-                <th scope="col">上課地點</th>
-                <th scope="col">操作</th>
+                <th>編號</th>
+                <th>姓名</th>
+                <th>科系</th>
+                <th>性別</th>
+                <th>生日</th>
+                <th>Email</th>
+                <th>手機</th>
+                <th>年級</th>
+                <th>班級</th>
+                <th>操作</th>
             </tr>
         </thead>
-        <tbody id="courseBody">
+        <tbody id="teacherBody">
         </tbody>
     </table>
 </div>
@@ -36,3 +36,93 @@
         <!-- 更多分頁按鈕 -->
     </div>
 </div>
+
+<div class="modal fade" id="teacherModal" tabindex="-1" aria-labelledby="teacherModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="teacherModalLabel">學生訊息</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form id="teacherForm" action="">
+                <input type="hidden" name="saveFunction" id="saveFunction" value="insert">
+                <input type="hidden" name="classId" id="classId">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="userId">教師編號:</label>
+                        <input type="text" id="userId" name="userId" class="form-control" placeholder="請輸入學號" required>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="courseId">姓&#12288;&#12288;名:</label>
+                        <input type="text" id="userName" name="userName" class="form-control" placeholder="請輸入姓名" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="courseDep">科&#12288;&#12288;系:</label>
+                        <select id="courseDep" name="courseDep" class="form-select">
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>性&#12288;&#12288;別:</label>
+                        <div>
+                            <input class="form-check-input" type="radio" name="sex" id="male" value="1" checked>
+                            <label class="form-check-label" for="male">男</label>
+                        </div>
+                        <div>
+                            <input class="form-check-input" type="radio" name="sex" id="female" value="2">
+                            <label class="form-check-label" for="female">女</label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="birthDate">生&#12288;&#12288;日:</label>
+                        <input type="date" id="birthDate" name="birthDate" class="form-control" placeholder="請輸入生日" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">電子信箱:</label>
+                        <input type="email" id="email" name="email" class="form-control" placeholder="請輸入Email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">手&#12288;&#12288;機:</label>
+                        <input type="text" id="phone" name="phone" class="form-control" placeholder="請輸入手機" required>
+                    </div>
+                    <div class="form-group">
+                        <label>班&#12288;&#12288;級:</label>
+                        <select id="classGrade" name="classGrade" class="form-select">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>年
+                        <select id="className" name="className" class="form-select">
+                            <option value="甲">甲</option>
+                            <option value="乙">乙</option>
+                            <option value="丙">丙</option>
+                        </select>班
+                    </div>
+                    <div class="form-group">
+                        <label for="birthDate">入學日期:</label>
+                        <input type="date" id="admissionDate" name="admissionDate" class="form-control" placeholder="請輸入入學日期" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="birthDate">大頭貼:&#12288;</label>
+                        <input type="file" id="sticker" name="sticker" class="form-control" accept=".jpg, .png">
+                        <img id="stickerPreview" src="" alt="預覽圖片" style="max-width: 200px; max-height: 200px; margin-top: 10px; display: none;">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary">保存</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script>
+    searchTeacher();
+    loadDepartment();
+    $('#teacherForm').on('submit', (e) => {
+        e.preventDefault();
+        saveTeacher();
+    });
+</script>
