--- a/src/main/resources/static/root/root_course.html
+++ b/src/main/resources/static/root/root_course.html
@@ -49,8 +49,8 @@
                 <input type="hidden" name="courseIndex" id="courseIndex">
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="courseDep">科&#12288;&#12288;系:</label>
-                        <select id="courseDep" name="courseDep" class="form-select" aria-label="Default select example">
+                        <label for="depId">科&#12288;&#12288;系:</label>
+                        <select id="depId" name="depId" class="form-select" aria-label="Default select example">
                         </select>
                     </div>
                     <div class="form-group">
