--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -58,8 +58,8 @@
                         <input type="text" id="userName" name="userName" class="form-control" placeholder="請輸入姓名" required>
                     </div>
                     <div class="form-group">
-                        <label for="courseDep">科&#12288;&#12288;系:</label>
-                        <select id="courseDep" name="courseDep" class="form-select">
+                        <label for="depId">科&#12288;&#12288;系:</label>
+                        <select id="depId" name="depId" class="form-select">
                         </select>
                     </div>
                     <div class="form-group">
