--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -58,6 +58,7 @@
             align-items: center;
             margin-bottom: 10px;
         }
+		
         .form-group label {
             margin-right: 10px;
             white-space: nowrap;
@@ -130,8 +131,9 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="./js/common.js"></script>
 	<script src="./js/root_course.js"></script>
-	<script src="./js/root_student.js"></script>
+	<!-- <script src="./js/root_student.js"></script> -->
 	<script src="./js/root_teacher.js"></script>
+	<script src="./js/root_user.js"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
 			renderHtml('content', 'root/root_front_page.html');
