--- a/src/main/resources/static/root/root_student.html
+++ b/src/main/resources/static/root/root_student.html
@@ -8,7 +8,7 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#studentModal" onclick="insertStudent()">新增</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#studentModal" onclick="insertUser('studentForm', 3)">新增</button>
         <thead>
             <tr>
                 <th>學號</th>
@@ -47,6 +47,7 @@
             <form id="studentForm" action="">
                 <input type="hidden" name="saveFunction" id="saveFunction" value="insert">
                 <input type="hidden" name="classId" id="classId">
+                <input type="hidden" name="permissionId" id="permissionId" value="3">
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="userId">學&#12288;&#12288;號:</label>
@@ -119,10 +120,10 @@
 </div>
 
 <script>
-    searchStudent();
+    searchUser('studentBody', 'studentModal', 3);
     loadDepartment();
     $('#studentForm').on('submit', (e) => {
         e.preventDefault();
-        saveStudent();
+        saveUser('studentForm', 'studentBody', 'studentModal');
     });
 </script>
