--- a/src/main/resources/static/root/root_teacher.html
+++ b/src/main/resources/static/root/root_teacher.html
@@ -8,7 +8,7 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#teacherModal" onclick="insertTeacher()">新增</button>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#teacherModal" onclick="insertUser('teacherForm', 2)">新增</button>
         <thead>
             <tr>
                 <th>編號</th>
@@ -47,6 +47,7 @@
             <form id="teacherForm" action="">
                 <input type="hidden" name="saveFunction" id="saveFunction" value="insert">
                 <input type="hidden" name="classId" id="classId">
+                <input type="hidden" name="permissionId" id="permissionId" value="2">
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="userId">教師編號:</label>
@@ -119,10 +120,10 @@
 </div>
 
 <script>
-    searchTeacher();
+    searchUser('teacherBody', 'teacherModal', 2);
     loadDepartment();
     $('#teacherForm').on('submit', (e) => {
         e.preventDefault();
-        saveTeacher();
+        saveUser('teacherForm', 'teacherBody', 'teacherModal');
     });
 </script>
