--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -134,6 +134,10 @@
 	<script src="./js/root_user.js"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
+			var token = localStorage.getItem("token");
+			if (token == null) {
+				window.location.href = '/index.html';
+			}
 			renderHtml('content', 'root/root_front_page.html');
 			sideBarLinkage();
 		});
