--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -116,7 +116,7 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i> 退出系統</a>
+							<a class="nav-link" href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> 退出系統</a>
 						</li>
 					</ul>
 				</div>
