--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -18,7 +18,7 @@
 			<h1><i class="fas fa-university"></i>大學選課系統</h1>
 		</div>
 		<div>
-			<span style="font-size: 24px;"><i class="fas fa-user-cog"></i>管理員</span>
+			<span id="headerName" style="font-size: 24px;"><i class="fas fa-user-cog"></i></span>
 		</div>
 	</div>
 	<!-- main -->
@@ -76,6 +76,7 @@
 			}
 			renderHtml('content', 'root/root_front_page.html');
 			sideBarLinkage();
+			$('#headerName').append(`${userName}`);
 		});
 
 		// sidebar 連動
