--- a/src/main/resources/static/student.html
+++ b/src/main/resources/static/student.html
@@ -22,83 +22,84 @@
 	
 </head>
 <body>
-		<!-- header -->
-		<div class="header">
-			<div>
-				<h1><i class="fas fa-university"></i>大學選課系統</h1>
-			</div>
-			<div>
-				<span style="font-size: 24px;"><i class="fas fa-user-cog"></i> 學生</span>
-			</div>
+	<!-- header -->
+	<div class="header">
+		<div>
+			<h1><i class="fas fa-university"></i>大學選課系統</h1>
 		</div>
-		<!-- main -->
-		<div class="container-fluid">
-			<div class="row">
-				<nav class="col-12 col-lg-2 order-2 order-lg-2 sidebar">
-					<div class="position-sticky">
-						<ul class="nav flex-lg-column flex-row">
-							<li class="nav-item">
-								<a class="nav-link active" href="#" link-page="student_front_page"><i class="fas fa-home"></i> 系統首頁</a>
-							</li>
-							
-							<li class="nav-item">
-								<a class="nav-link" href="#" link-page="student_grade"><i class="fas fa-graduation-cap"></i> 成績查詢</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#" link-page="student_schedule"><i class="fas fa-calendar-alt" style="font-size: 22px;"></i> &nbsp;課表查詢</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#" link-page="course_select"><i class="fas fa-chalkboard-teacher"></i> 選課系統</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> 退出系統</a>
-							</li>
-						</ul>
-					</div>
-				</nav>
-
-				<main id="content" class="col-12 col-lg-10 order-2 order-lg-2 content">
-				</main>
-			</div>
+		<div>
+			<span id="headerName" style="font-size: 24px;"><i class="fas fa-user-cog"></i></span>
 		</div>
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="./js/common.js"></script>
-		<script>
-			$(document).ready(function() {
-				var token = localStorage.getItem("token");
-				if (token == null) {
-					window.location.href = '/index.html';
-				}
-				renderHtml('content', 'student/student_front_page.html');
-				sideBarLinkage();
-			});
+	</div>
+	<!-- main -->
+	<div class="container-fluid">
+		<div class="row">
+			<nav class="col-12 col-lg-2 order-2 order-lg-2 sidebar">
+				<div class="position-sticky">
+					<ul class="nav flex-lg-column flex-row">
+						<li class="nav-item">
+							<a class="nav-link active" href="#" link-page="student_front_page"><i class="fas fa-home"></i> &nbsp;系統首頁</a>
+						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link" href="#" link-page="student_grade"><i class="fas fa-graduation-cap"></i> 成績查詢</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" link-page="student_schedule"><i class="fas fa-calendar-alt" style="font-size: 22px;"></i> &nbsp;課表查詢</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" link-page="course_select"><i class="fas fa-chalkboard-teacher"></i> 選課系統</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> 退出系統</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
 
-			// sidebar 連動
-			const sideBarLinkage = () => {
-				var navLink = document.getElementsByClassName('nav-link');
-				for (var i = 0; i < navLink.length; i++) {
-					navLink[i].addEventListener('click', (e) => {
-						// 確保點擊的是 nav-link
-						var clickedElement = e.target;
-						if (!clickedElement.classList.contains('nav-link')) {
-							clickedElement = clickedElement.closest('.nav-link');
-						}
-
-						var page = clickedElement.getAttribute('link-page');
-						if (page) {
-							renderHtml('content', `student/${page}.html`);
-						}
-						// 切換 active 屬性
-						var activeElement = document.querySelector('.nav-link.active');
-						if (activeElement) {
-							activeElement.classList.remove('active');
-						}
-						clickedElement.classList.add('active');
-
-					})
-				}
+			<main id="content" class="col-12 col-lg-10 order-2 order-lg-2 content">
+			</main>
+		</div>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="./js/common.js"></script>
+	<script>
+		$(document).ready(function() {
+			var token = localStorage.getItem("token");
+			if (token == null) {
+				window.location.href = '/index.html';
 			}
-		</script>
+			renderHtml('content', 'student/student_front_page.html');
+			sideBarLinkage();
+			$('#headerName').append(`${userName}`);
+		});
+
+		// sidebar 連動
+		const sideBarLinkage = () => {
+			var navLink = document.getElementsByClassName('nav-link');
+			for (var i = 0; i < navLink.length; i++) {
+				navLink[i].addEventListener('click', (e) => {
+					// 確保點擊的是 nav-link
+					var clickedElement = e.target;
+					if (!clickedElement.classList.contains('nav-link')) {
+						clickedElement = clickedElement.closest('.nav-link');
+					}
+
+					var page = clickedElement.getAttribute('link-page');
+					if (page) {
+						renderHtml('content', `student/${page}.html`);
+					}
+					// 切換 active 屬性
+					var activeElement = document.querySelector('.nav-link.active');
+					if (activeElement) {
+						activeElement.classList.remove('active');
+					}
+					clickedElement.classList.add('active');
+
+				})
+			}
+		}
+	</script>
 </body>
 </html>
