--- a/src/main/resources/static/teacher.html
+++ b/src/main/resources/static/teacher.html
@@ -2,9 +2,88 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Student</title>
+	<title>老師</title>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+	<link href="./css/common.css" rel="stylesheet">
 </head>
 <body>
-	<h1>老師</h1>
+	<!-- header -->
+	<div class="header">
+		<div>
+			<h1><i class="fas fa-university"></i>大學選課系統</h1>
+		</div>
+		<div>
+			<span id="headerName" style="font-size: 24px;"><i class="fas fa-user-cog"></i></span>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<nav class="col-12 col-lg-2 order-2 order-lg-2 sidebar">
+				<div class="position-sticky">
+					<ul class="nav flex-lg-column flex-row">
+						<li class="nav-item">
+							<a class="nav-link active" href="#" link-page="teacher_front_page"><i class="fas fa-home"></i> &nbsp;系統首頁</a>
+						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link" href="#" link-page="teacher_course"><i class="fas fa-graduation-cap"></i> 課程編輯</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" link-page="teacher_grade"><i class="fas fa-calendar-alt"></i> 成績批改</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> 退出系統</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+
+			<main id="content" class="col-12 col-lg-10 order-2 order-lg-2 content">
+			</main>
+		</div>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="./js/common.js"></script>
+	<script src="./js/teacher_course.js"></script>
+	<script>
+		$(document).ready(function() {
+			var token = localStorage.getItem("token");
+			if (token == null) {
+				window.location.href = '/index.html';
+			}
+			renderHtml('content', 'teacher/teacher_front_page.html');
+			sideBarLinkage();
+			$('#headerName').append(`${userName}`);
+		});
+
+		// sidebar 連動
+		const sideBarLinkage = () => {
+			var navLink = document.getElementsByClassName('nav-link');
+			for (var i = 0; i < navLink.length; i++) {
+				navLink[i].addEventListener('click', (e) => {
+					// 確保點擊的是 nav-link
+					var clickedElement = e.target;
+					if (!clickedElement.classList.contains('nav-link')) {
+						clickedElement = clickedElement.closest('.nav-link');
+					}
+
+					var page = clickedElement.getAttribute('link-page');
+					if (page) {
+						renderHtml('content', `teacher/${page}.html`);
+					}
+					// 切換 active 屬性
+					var activeElement = document.querySelector('.nav-link.active');
+					if (activeElement) {
+						activeElement.classList.remove('active');
+					}
+					clickedElement.classList.add('active');
+
+				})
+			}
+		}
+	</script>
 </body>
 </html>
