--- a/src/main/resources/static/teacher/teacher_grade.html
+++ b/src/main/resources/static/teacher/teacher_grade.html
@@ -1,6 +1,6 @@
-<div class="d-flex mb-3 p-3 border border-opacity-100 bg-white rounded ">
-    年份: 
-    <select name="year" id="year">
+<div class="d-flex align-items-center mb-3 p-3 border border-opacity-100 bg-white rounded">
+    <label for="year">年份:</label>
+    <select class="form-select w-25" name="year" id="year">
         <option value="110">110</option>
         <option value="111">111</option>
         <option value="112">112</option>
@@ -10,7 +10,6 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#studentModal" onclick="insertUser('studentForm', 3)">新增</button>
         <thead>
             <tr>
                 <th>年份</th>
