開始寫成績批改

--- a/src/main/resources/static/teacher/teacher_grade.html
+++ b/src/main/resources/static/teacher/teacher_grade.html
@@ -6,6 +6,13 @@
         <option value="112">112</option>
         <option value="113">113</option>
     </select>
+    <label for="year">課程名稱:</label>
+    <select class="form-select w-25" name="courseName" id="courseName">
+        <option value="110">110</option>
+        <option value="111">111</option>
+        <option value="112">112</option>
+        <option value="113">113</option>
+    </select>
 </div>
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
@@ -13,8 +20,10 @@
         <thead>
             <tr>
                 <th>年份</th>
+                <th>學期</th>
                 <th>科系</th>
                 <th>課名</th>
+                <th>學生</th>
                 <th>分數</th>
             </tr>
         </thead>
